--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Navigation menu in the root component (app.component.html) -->
 <div class="container">
   <nav class="navbar navbar-defualt">
-    <ul>
+    <ul class="nav navbar-nav">
       <li>
         <a routerLinkActive='active' routerLink='list'>List</a>
       </li>
