--- a/src/app/employee/create-employee.component.html
+++ b/src/app/employee/create-employee.component.html
@@ -1,1 +1,22 @@
-<p>create-employee works!</p>
+
+<form [formGroup]="employeeForm" (ngSubmit) = "onSubmit()" class="form-horizontal">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Create Employee</h3>
+      </div>
+      <div class="panel-body">
+        <div class="form-group">
+          <label class="col-sm-2 control-label" for="name">Full Name</label>
+          <div class="col-sm-8">
+            <input id="fullName" type="text" class="form-control" formControlName="name">
+          </div>
+        </div>
+  
+       
+      </div>
+      <div class="panel-footer">
+        <button class="btn btn-primary" type="submit">Save</button>
+      </div>
+    </div>
+  </form>
+  
