--- a/src/app/employee/create-employee.component.html
+++ b/src/app/employee/create-employee.component.html
@@ -56,9 +56,12 @@
         </div>
       
       </div> 
-      
+
       <div class="panel-footer">
-        <button class="btn btn-primary" type="submit">Save</button>
+        <div class="btn btn-toolbar">
+          <button class="btn btn-primary" type="submit">Save</button>
+          <button class="btn btn-primary" type="button" (click)="onLoadDataClick()">Load Data</button>
+      </div>
       </div>
     </div>
   </form>
