Angular reactive forms validation

--- a/src/app/employee/create-employee.component.html
+++ b/src/app/employee/create-employee.component.html
@@ -5,10 +5,25 @@
         <h3 class="panel-title">Create Employee</h3>
       </div>
       <div class="panel-body">
-        <div class="form-group">
+          <div class="form-group"
+          [ngClass]="{'has-error': ((employeeForm.get('name').touched ||
+                                     employeeForm.get('name').dirty) &&
+                                     employeeForm.get('name').errors)}">
           <label class="col-sm-2 control-label" for="name">Full Name</label>
           <div class="col-sm-8">
-            <input id="fullName" type="text" class="form-control" formControlName="name">
+            <input id="name" type="text" class="form-control" formControlName="name">
+        <span class="help-block"
+          *ngIf="((employeeForm.get('name').touched ||
+                   employeeForm.get('name').dirty) &&
+                   employeeForm.get('name').errors)">
+      <span *ngIf="employeeForm.get('name').errors.required">
+        Full Name is required
+      </span>
+
+      <span *ngIf="employeeForm.get('name').errors.minlength ||employeeForm.get('name').errors.maxlength">
+          Full Name must be greater than 2 characters and less than 10 characters
+      </span>
+    </span>
           </div>
         </div>
   
